2008-10-31  Ramon Novoa  <rnovoa@artica.es>

	* include/styles/god.css,
	  operation/menu.php,
	  godmode/menu.php: Added support for enterprise SNMP console.

	* operation/snmpconsole/snmp_view.php: Added filtering, fullscreen
	  support, interface changes and enterprise SNMP console support.

2008-10-31  Jorge Gonzalez  <jorgegonz@artica.es>

	* pandoradb_data.sql: Added support for finnish. 

2008-10-29  Evi Vanoost  <vanooste@rcbi.rochester.edu>

	* operation/agentes/status_monitor.php: Made it a bit faster and fixed
	some issues I had with it (flag). Uses new html functions now.

	* include/functions.php: Made human_time_comparation accept both
	Unixtime as well as other system timestamps

2008-10-28  Esteban Sanchez  <estebans@artica.es>

	* godmode/modules/manage_network_components.php: Replaced parameters
	manual check using entrada_limpia with get_parameter(). It was causing
	PHP notices and was not working fine.

2008-10-27  Evi Vanoost  <vanooste@rcbi.rochester.edu>

	* godmode/users/user_list.php: Rewrite to use print_table. Fixed
	security hole where the acl check didn't call exit
	
	* godmode/users/configure_user.php: Fixed security hole with acl check

	* godmode/setup/setup.php, godmode/setup/news.php, 
	godmode/setup/links.php: Removed call to comprueba_login, made acl
	checks exit and require_once config.php

	* godmode/reporting/reporting_builder.php,
	godmode/reporting/map_builder.php, godmode/reporting/graph_builder.php:
	Removed call to comprueba_login, made acl checks exit.

	* godmode/alerts/modify_alert.php, godmode/alerts/configure_alert.php:
	Fixed acl check and removed call to comprueba_login.

2008-10-24  Esteban Sanchez  <estebans@artica.es>

	* operation/snmpconsole/snmp_alert.php: Fixed an error that doesn't
	allow to show some fields when editing an alert. It's done using
	javascript, but a PHP version might be better. Style correction.

	* include/functions_db.php: Added get_agent_with_ip().
